RESOLVED FIXED132864
REGRESSION(r167771): [GTK] Text fields and areas are rendered unthemed
https://bugs.webkit.org/show_bug.cgi?id=132864
Summary REGRESSION(r167771): [GTK] Text fields and areas are rendered unthemed
Carlos Garcia Campos
Reported 2014-05-13 05:33:09 PDT
This is because the virtual methods changed the API in the parent, and since we don't have the methods marked as override we didn't noticed it.
Attachments
Patch (22.40 KB, patch)
2014-05-13 05:39 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2014-05-13 05:39:06 PDT
Carlos Garcia Campos
Comment 2 2014-05-13 08:34:36 PDT
Note You need to log in before you can comment on or make changes to this bug.